# pre-legal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: auth.py  chat.py  database.py  download.py  main.py  static_files.py
backend/tests/: conftest.py  test_chat.py
frontend/: Dockerfile  docker-compose.yml  package.json
frontend/__tests__/: NdaDocument.test.tsx  NdaForm.test.tsx  api.download.test.ts  ndaUtils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/download/: route.ts
frontend/app/login/: page.tsx
frontend/components/: AiAddendumDocument.tsx  DesignPartnerDocument.tsx  DocumentChat.tsx  DocumentCreator.tsx  NdaChat.tsx  NdaCoverPageDocument.tsx  NdaCreator.tsx  NdaDocument.tsx  NdaForm.tsx  PilotDocument.tsx
frontend/lib/: documents.ts  ndaUtils.ts  types.ts
mutual-nda/: app.js  app.py  docker-compose.yml  index.html  styles.css
mutual-nda/templates/: index.html  nda_document.html
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
templates/: LICENSE.txt
