[project]
name = "pre-legal-backend"
version = "0.1.0"
description = "Pre-Legal SaaS backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyJWT>=2.9.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=24.1.0",
    "weasyprint>=62.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
